# ImagePlus

./: ABOUT.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  mod.json
include/: api.hpp  events.hpp  types.hpp
src/: API.cpp  Events.cpp  FakeVector.hpp  StateManager.cpp  StateManager.hpp  Tests.cpp
src/formats/: Detectors.cpp  gif.cpp  jxl.cpp  png.cpp  qoi.cpp  webp.cpp
src/hooks/: CCImage.cpp  CCSprite.cpp  CCSprite.hpp  CCTexture.cpp
